Colaboratory を使用して作成しました

--- a/cpp_problems.ipynb
+++ b/cpp_problems.ipynb
@@ -6,7 +6,7 @@
       "name": "cpp_problems.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyPyi0X/eH4QP0Toq4xnGzoF",
+      "authorship_tag": "ABX9TyMLi36ICrfAWR/ePe5I5Ms1",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1023,7 +1023,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1046,7 +1046,7 @@
         "id": "XmD17ass96nZ",
         "outputId": "ff3f4e2f-6d0d-48ca-83e0-5ff05f870f89"
       },
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1101,7 +1101,7 @@
         },
         "collapsed": true
       },
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1124,7 +1124,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1160,7 +1160,7 @@
         "id": "1r9WyCZ-_RTm",
         "outputId": "23b46837-347d-4f1e-f1b6-7d2eb5b8a2fa"
       },
-      "execution_count": 90,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1183,7 +1183,7 @@
         "id": "lcrGfnTM_skv",
         "outputId": "9761c6dc-66f5-4380-9cf5-97c24d318881"
       },
-      "execution_count": 91,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1231,7 +1231,7 @@
         "id": "wOeo87nDCltg",
         "outputId": "d90b1a74-435e-4128-9caf-947d811ca52c"
       },
-      "execution_count": 98,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1254,7 +1254,7 @@
         "id": "pYrZRG2hClkf",
         "outputId": "a80bc8a8-a673-4f73-a532-b89c98b55c6b"
       },
-      "execution_count": 99,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1309,7 +1309,7 @@
         "id": "3GDAHUw4EvvY",
         "outputId": "e2ac7413-e632-43d1-f9b5-c6f7ead67a5f"
       },
-      "execution_count": 105,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1332,7 +1332,7 @@
         "id": "iLnxSzL8Fh3d",
         "outputId": "39403d3f-a5df-4dca-f336-697831272a2f"
       },
-      "execution_count": 106,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1360,7 +1360,7 @@
         },
         "outputId": "c8f8c9dc-5792-48f2-a154-926f0204271e"
       },
-      "execution_count": 108,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1407,7 +1407,7 @@
         "    return 0;\n",
         "}"
       ],
-      "execution_count": 111,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1430,7 +1430,7 @@
       "source": [
         "!g++ temp.cpp; echo 3 4 5 6 2 2 0 0 |./a.out"
       ],
-      "execution_count": 112,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1497,7 +1497,7 @@
         "id": "Y7d83pWaHp-u",
         "outputId": "04d04e40-74cb-443d-a6a8-52314c488078"
       },
-      "execution_count": 162,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1520,7 +1520,7 @@
         "id": "TeFIax37Hp6H",
         "outputId": "4dae9c22-8f40-495f-e60f-938ef2f32852"
       },
-      "execution_count": 163,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1552,7 +1552,7 @@
           "height": 90
         }
       },
-      "execution_count": 164,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1602,7 +1602,7 @@
         "    }\n",
         "}"
       ],
-      "execution_count": 165,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1625,7 +1625,7 @@
       "source": [
         "!g++ temp.cpp; echo 3 4 5 6 3 3 0 0 |./a.out"
       ],
-      "execution_count": 166,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1693,7 +1693,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 171,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1716,7 +1716,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 172,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1783,7 +1783,7 @@
         "    }\n",
         "}"
       ],
-      "execution_count": 173,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1806,7 +1806,7 @@
       "source": [
         "!g++ temp.cpp; echo 3 4 5 6 3 3 2 2 1 1 0 0 |./a.out"
       ],
-      "execution_count": 174,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1879,7 +1879,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 180,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1902,7 +1902,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 181,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1917,15 +1917,6 @@
           ]
         }
       ]
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "# いまここ"
-      ],
-      "metadata": {
-        "id": "0bDc_U3KEiSd"
-      }
     },
     {
       "cell_type": "code",
@@ -1966,7 +1957,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 182,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1989,7 +1980,55 @@
       "source": [
         "!g++ temp.cpp; echo 30 |./a.out"
       ],
-      "execution_count": 183,
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            " 3 6 9 12 13 15 18 21 23 24 27 30"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# いまここ"
+      ],
+      "metadata": {
+        "id": "0bDc_U3KEiSd"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 別解\n",
+        "# 問題 ITP1_5_D: Structured Programming\n",
+        "# 整数 n 以下の3の倍数または3のつく数を出力する。先頭は空白。\n",
+        "# 上の解法は void call と言う関数内でアウトプットしている\n",
+        "# 関数はロジック部分だけを受け持ち、出力と切り離したい\n",
+        "# bitset を使って全探索にできないか\n"
+      ],
+      "metadata": {
+        "id": "1ms-X_3CibPp"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "aff92bb9-85b2-42fc-b5ec-2eeb641b2940",
+        "id": "l94YNeE1iZhg"
+      },
+      "source": [
+        "!g++ temp.cpp; echo 30 |./a.out"
+      ],
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2036,7 +2075,7 @@
         "    return 0;\n",
         "}\n"
       ],
-      "execution_count": 40,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2059,7 +2098,7 @@
       "source": [
         "!g++ temp.cpp; echo 5 1 2 3 4 5 |./a.out"
       ],
-      "execution_count": 41,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2170,7 +2209,7 @@
         "    return 0;\n",
         "}\n"
       ],
-      "execution_count": 42,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2193,7 +2232,7 @@
       "source": [
         "!g++ temp.cpp; echo  47 S 10 S 11 S 12 S 13 H 1 H 2 S 6 S 7 S 8 S 9 H 6 H 8 H 9 H 10 H 11 H 4 H 5 S 2 S 3 S 4 S 5 H 12 H 13 C 1 C 2 D 1 D 2 D 3 D 4 D 5 D 6 D 7 C 3 C 4 C 5 C 6 C 7 C 8 C 9 C 10 C 11 C 13 D 9 D 10 D 11 D 12 D 13 |./a.out"
       ],
-      "execution_count": 43,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2267,7 +2306,7 @@
         " 0 0 0 0 0 0 0 0 0 0<br>\n",
         " 0 0 0 0 0 0 0 1 0 0</span>"
       ],
-      "execution_count": 44,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2333,7 +2372,7 @@
         "    return 0;\n",
         "}"
       ],
-      "execution_count": 45,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2356,7 +2395,7 @@
       "source": [
         "!g++ temp.cpp; echo 3 1 1 3 8 3 2 2 7 4 3 8 1 |./a.out"
       ],
-      "execution_count": 46,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2451,7 +2490,7 @@
         "    return 0;\n",
         "}"
       ],
-      "execution_count": 47,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2474,7 +2513,7 @@
       "source": [
         "!g++ temp.cpp; echo 3 4 1 2 0 1 0 3 0 1 4 1 1 0 1 2 3 0 |./a.out"
       ],
-      "execution_count": 48,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2555,7 +2594,7 @@
         "    return 0;\n",
         "}"
       ],
-      "execution_count": 49,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2578,7 +2617,7 @@
       "source": [
         "!g++ temp.cpp; echo 40 42 -1 20 30 -1 0 2 -1 -1 -1 -1 |./a.out"
       ],
-      "execution_count": 50,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2663,7 +2702,7 @@
         "    return 0;\n",
         "}"
       ],
-      "execution_count": 51,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2686,7 +2725,7 @@
       "source": [
         "!g++ temp.cpp; echo 5 9 0 0 |./a.out"
       ],
-      "execution_count": 52,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2774,7 +2813,7 @@
         "    return 0;\n",
         "}"
       ],
-      "execution_count": 53,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2797,7 +2836,7 @@
       "source": [
         "!g++ temp.cpp; echo 4 5 1 1 3 4 5 2 2 2 4 5 3 3 0 1 1 2 3 4 4 6 |./a.out"
       ],
-      "execution_count": 54,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2882,7 +2921,7 @@
         "\n",
         "C_{ij} = \\sum_{k=1}^m a_{ik}b_{kj}\n"
       ],
-      "execution_count": 55,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2939,7 +2978,7 @@
         "    return 0;\n",
         "}"
       ],
-      "execution_count": 56,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2962,7 +3001,7 @@
       "source": [
         "!g++ temp.cpp; echo 3 2 3 1 2 0 3 4 5 1 2 1 0 3 2 |./a.out"
       ],
-      "execution_count": 57,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3052,7 +3091,7 @@
         "    return 0;\n",
         "}"
       ],
-      "execution_count": 58,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3075,7 +3114,7 @@
       "source": [
         "!g++ temp.cpp; echo fAIR, LATER, OCCASIONALLY CLOUDY.  |./a.out"
       ],
-      "execution_count": 59,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3179,7 +3218,7 @@
         "    return 0;\n",
         "}\n"
       ],
-      "execution_count": 60,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3202,7 +3241,7 @@
       "source": [
         "!g++ temp.cpp; echo 123 55 1000 0  |./a.out"
       ],
-      "execution_count": 61,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3318,7 +3357,7 @@
         "    return 0;\n",
         "}\n"
       ],
-      "execution_count": 62,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3341,7 +3380,7 @@
       "source": [
         "!g++ temp.cpp; echo This is a pen. |./a.out"
       ],
-      "execution_count": 63,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3409,7 +3448,7 @@
         "\n",
         "}"
       ],
-      "execution_count": 64,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3432,7 +3471,7 @@
       "source": [
         "!g++ temp.cpp; echo vanceknowledgetoad advance |./a.out"
       ],
-      "execution_count": 65,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3561,7 +3600,7 @@
         "\n",
         "\n"
       ],
-      "execution_count": 66,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3584,7 +3623,7 @@
       "source": [
         "!g++ temp.cpp; echo computer Nurtures computer scientists and highly-skilled computer engineers who will create and exploit  knowledge  for the new era. Provides an outstanding computer environment. END_OF_TEXT |./a.out"
       ],
-      "execution_count": 67,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3709,7 +3748,7 @@
         "    return 0;\n",
         "}\n"
       ],
-      "execution_count": 68,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3732,7 +3771,7 @@
       "source": [
         "!g++ temp.cpp; echo aabc 3 1 2 1 vwxyz 2 3 4 - |./a.out"
       ],
-      "execution_count": 69,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3842,7 +3881,7 @@
         "    return 0;\n",
         "}\n"
       ],
-      "execution_count": 70,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3865,7 +3904,7 @@
       "source": [
         "!g++ temp.cpp; echo 3 cat dog fish fish lion tiger |./a.out"
       ],
-      "execution_count": 71,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3975,7 +4014,7 @@
         "    return 0;\n",
         "}\n"
       ],
-      "execution_count": 72,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3998,7 +4037,7 @@
       "source": [
         "!g++ temp.cpp; echo abcde 3 replace 1 3 xyz reverse 0 2 print 1 4 |./a.out"
       ],
-      "execution_count": 73,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4105,7 +4144,7 @@
         "    return 0;\n",
         "}\n"
       ],
-      "execution_count": 74,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4128,7 +4167,7 @@
       "source": [
         "!g++ temp.cpp; echo 0 0 1 1 |./a.out"
       ],
-      "execution_count": 75,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4231,7 +4270,7 @@
         "    return 0;\n",
         "}\n"
       ],
-      "execution_count": 76,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4254,7 +4293,7 @@
       "source": [
         "!g++ temp.cpp; echo 4 3 90 |./a.out"
       ],
-      "execution_count": 77,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4361,7 +4400,7 @@
         "    return 0;\n",
         "}\n"
       ],
-      "execution_count": 78,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4384,7 +4423,7 @@
       "source": [
         "!g++ temp.cpp; echo 5 70 80 100 90 20 3 80 80 80 0 |./a.out"
       ],
-      "execution_count": 79,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
