Colaboratory を使用して作成しました

--- a/cpp_bitsetsearch.ipynb
+++ b/cpp_bitsetsearch.ipynb
@@ -6,7 +6,7 @@
       "name": "cpp_bitsetsearch.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyOg0ZuKleJn9gpys6UWjOAd",
+      "authorship_tag": "ABX9TyOlRGDt6FqgdXddRv14GZMh",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -49,7 +49,6 @@
         "#include <bits/stdc++.h>\n",
         "using namespace std;\n",
         "\n",
-        "\n",
         "int N, K, A[100009];\n",
         "\n",
         "int main() {\n",
@@ -59,7 +58,7 @@
         "\n",
         "    // DP の遷移を bitset に落とし込む\n",
         "    bitset<20> dp;\n",
-        "    dp.set(0);\n",
+        "    dp.set(0); // 0000001 になる\n",
         "    for (int i = 0; i < N; i++) dp |= (dp << A[i]);\n",
         "    cout << A[1] << endl;\n",
         "\n",
@@ -67,15 +66,14 @@
         "    cout << dp[K] << endl;\n",
         "    if (dp[K] == 1) cout << \"Yes\" << endl;\n",
         "    else cout << \"No\" << endl;\n",
-        "    return 0;\n",
         "}"
       ],
       "metadata": {
         "id": "9Dgr0hn2rkjH",
-        "outputId": "fd3e7bca-6892-4d23-ca30-d08cd9401079",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "fd3e7bca-6892-4d23-ca30-d08cd9401079"
       },
       "execution_count": 75,
       "outputs": [
@@ -96,10 +94,10 @@
       ],
       "metadata": {
         "id": "Y9qViu6jrkxF",
-        "outputId": "d92945b5-8c63-4ab6-fed6-6937dabb245a",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "d92945b5-8c63-4ab6-fed6-6937dabb245a"
       },
       "execution_count": 76,
       "outputs": [
@@ -141,11 +139,11 @@
         "}"
       ],
       "metadata": {
-        "id": "xeU7CL9j30Ou",
-        "outputId": "59535e7f-1543-4873-a925-3386b24b7a6d",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "xeU7CL9j30Ou",
+        "outputId": "59535e7f-1543-4873-a925-3386b24b7a6d"
       },
       "execution_count": 88,
       "outputs": [
@@ -164,11 +162,11 @@
         "!g++ temp.cpp; ./a.out"
       ],
       "metadata": {
-        "id": "1MBoy_wr4Qw6",
-        "outputId": "0a6de5f3-dea9-4103-cb8a-4b404bba46b6",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "1MBoy_wr4Qw6",
+        "outputId": "0a6de5f3-dea9-4103-cb8a-4b404bba46b6"
       },
       "execution_count": 89,
       "outputs": [
