Colaboratory を使用して作成しました

--- a/cpp_bitsetsearch.ipynb
+++ b/cpp_bitsetsearch.ipynb
@@ -6,7 +6,7 @@
       "name": "cpp_bitsetsearch.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyM9RfrYIaLIINVZ0jU63srk",
+      "authorship_tag": "ABX9TyPGQKSiwQIsjuQwadwC5mah",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -59,7 +59,9 @@
         "    bitset<100001> dp; // ある程度大きな数にしておく必要がある\n",
         "    dp.set(0); // bitset の 0 桁目 (右端) を 1 にする。他はデフォルトで 0\n",
         "    for (int i = 0; i < N; i++) dp |= (dp << vec.at(i)); // ここがポイント!!!! \n",
+        "    // 複合代入演算子を使っている\n",
         "    // 例えば 1 は |= で 11 になり 2 が来ると 1 と 2 と 3 にフラグが立つ\n",
+        "    // | なのですでにフラグが立っていればそのまま\n",
         "\n",
         "    // 答えを出力\n",
         "    if (dp.test(K)) cout << \"Yes\" << endl; // bitset の値を調べるのは test を使う\n",
@@ -73,7 +75,7 @@
         },
         "outputId": "fe1a085f-d536-4ca1-b9eb-56a24ecac03e"
       },
-      "execution_count": 98,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -97,7 +99,7 @@
         },
         "outputId": "f16fd787-b399-4246-e3c0-176470d7a590"
       },
-      "execution_count": 99,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -110,42 +112,13 @@
       ]
     },
     {
-      "cell_type": "markdown",
-      "source": [
-        "# いまここ bitset"
-      ],
-      "metadata": {
-        "id": "rHAn1W22zf3K"
-      }
-    },
-    {
       "cell_type": "code",
       "source": [
-        "# これらのビット演算の末尾に=を付けることで複合代入演算子として用いることができます。\n",
-        "\n",
-        "# サンプルプログラム\n",
-        "%%writefile temp.cpp\n",
-        "#include <bits/stdc++.h>\n",
-        "using namespace std;\n",
-        " \n",
-        "int main() {\n",
-        "  bitset<8> a(\"00011011\");\n",
-        "  bitset<8> b(\"00110101\");\n",
-        " \n",
-        "  auto c = a & b;\n",
-        "  cout << \"1: \" << c << endl;         // 1: 00010001\n",
-        "  cout << \"2: \" << (c << 1) << endl;  // 2: 00100010\n",
-        "  cout << \"3: \" << (c << 2) << endl;  // 3: 01000100\n",
-        "  cout << \"4: \" << (c << 3) << endl;  // 4: 10001000\n",
-        "  cout << \"5: \" << (c << 4) << endl;  // 5: 00010000\n",
-        " \n",
-        "  c <<= 4;\n",
-        "  c ^= bitset<8>(\"11010000\"); // XOR演算の複合代入演算子\n",
-        "  cout << \"6: \" << c << endl; // 6: 11000000\n",
-        "}"
+        "# 上記の部分和問題の解法は理解した\n",
+        "# 一般化出来ないと思う"
       ],
       "metadata": {
-        "id": "2K8AAcEfKfHT"
+        "id": "U7anW-ivwYXf"
       },
       "execution_count": null,
       "outputs": []
@@ -153,19 +126,9 @@
     {
       "cell_type": "code",
       "source": [
-        "!g++ temp.cpp; ./a.out "
-      ],
-      "metadata": {
-        "id": "lSsI6p0QK_2I"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "# bitsetの操作\n",
-        "# bitsetにはビット列を扱うときに便利な関数が用意されています。 以下に主要なものを挙げます。\n",
+        "# bitsetの操作に使う関数\n",
+        "# bitset は set, test を使う。 at や `[]` は使えない\n",
+        "# 位置の指定は右からで配列の逆\n",
         "%%html\n",
         "<table border=\"1\" style=\"width:80%\">\n",
         "<thead>\n",
@@ -178,17 +141,49 @@
         "</table>"
       ],
       "metadata": {
-        "id": "LCbhhtUiKuJS"
+        "id": "LCbhhtUiKuJS",
+        "outputId": "23f21d4c-c950-47fb-a67e-d821b050d13b",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 124
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "<IPython.core.display.HTML object>"
+            ],
+            "text/html": [
+              "<table border=\"1\" style=\"width:80%\">\n",
+              "<thead>\n",
+              "<tr><th>操作</th><th>書き方</th><th style=\"width: 50%\">備考</th></tr>\n",
+              "</thead>\n",
+              "<tbody>\n",
+              "<tr><td>特定のビットの値を変更する</td><td>変数.set(位置, 値);</td><td>変更するビットの位置を0始まりのインデックスで指定します。値は0か1を指定します。</td></tr>\n",
+              "<tr><td>特定のビットが1になっているかを調べる</td><td>変数.test(調べる位置);</td><td>調べるビットの位置を0始まりのインデックスで指定します。ビットが1ならtrueを、ビットが0ならfalseを返します。</td></tr>\n",
+              "</tbody>\n",
+              "</table>"
+            ]
+          },
+          "metadata": {}
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# いまここ\n"
+      ],
+      "metadata": {
+        "id": "aObux_AAx9WY"
+      }
     },
     {
       "cell_type": "code",
       "source": [
-        "# 位置の指定についてですが、ビット列の右から左にかけて0, 1, 2, ...と対応します。 \n",
-        "# 配列の位置の指定とは逆になっていることに注意してください。\n",
-        "\n",
         "# サンプルプログラム\n",
         "%%writefile temp.cpp\n",
         "#include <bits/stdc++.h>\n",
@@ -206,10 +201,22 @@
         "}"
       ],
       "metadata": {
-        "id": "PS6m2vFALaxy"
+        "id": "PS6m2vFALaxy",
+        "outputId": "c274b86b-bfc4-492e-e64f-d627c0aa6ba1",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Writing temp.cpp\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -217,10 +224,23 @@
         "!g++ temp.cpp; ./a.out "
       ],
       "metadata": {
-        "id": "aZAChAQEMgWf"
+        "id": "aZAChAQEMgWf",
+        "outputId": "29278f03-35f9-414e-df0b-d41b3ebc252c",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "0001\n",
+            "4th bit is 0\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -419,10 +439,48 @@
         "</table>"
       ],
       "metadata": {
-        "id": "mn2sFwd8kBYz"
+        "id": "mn2sFwd8kBYz",
+        "outputId": "51399bc9-2790-4226-e6f4-8fa22a0eca97",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 417
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "<IPython.core.display.HTML object>"
+            ],
+            "text/html": [
+              "<table border=\"1\" style=\"width: 90%\">\n",
+              "<thead>\n",
+              "<tr><th>操作</th><th>書き方</th><th style=\"width: 50%\">備考</th></tr>\n",
+              "</thead>\n",
+              "<tbody>\n",
+              "<tr><td>全てのビットを1にする</td><td>変数.set();</td><td></td></tr>\n",
+              "<tr><td>特定のビットを1にする</td><td>変数.set(1にする位置);</td><td>1にするビットの位置を0始まりのインデックスで指定します。</td></tr>\n",
+              "<tr><td>特定のビットの値を変更する</td><td>変数.set(位置, 値);</td><td>変更するビットの位置を0始まりのインデックスで指定します。値は0か1を指定します。</td></tr>\n",
+              "<tr><td>全てのビットを0にする</td><td>変数.reset();</td><td></td></tr>\n",
+              "<tr><td>特定のビットを0にする</td><td>変数.reset(0にする位置);</td><td>0にするビットの位置を0始まりのインデックスで指定します。</td></tr>\n",
+              "<tr><td>全てのビットを反転する</td><td>変数.flip();</td><td></td></tr>\n",
+              "<tr><td>特定のビットを反転する</td><td>変数.flip(反転する位置);</td><td>反転するビットの位置を0始まりのインデックスで指定します。</td></tr>\n",
+              "<tr><td>特定のビットが1になっているかを調べる</td><td>変数.test(調べる位置);</td><td>調べるビットの位置を0始まりのインデックスで指定します。ビットが1ならtrueを、ビットが0ならfalseを返します。</td></tr>\n",
+              "<tr><td>全てのビットが1になっているかを判定する</td><td>変数.all()</td><td>全てのビットが1ならtrueを、そうでなければfalseを返します。</td></tr>\n",
+              "<tr><td>いずれかのビットが1になっているかを判定する</td><td>変数.any()</td><td>1のビットが存在するならtrueを、そうでなければfalseを返します。</td></tr>\n",
+              "<tr><td>1のビットの個数を数える</td><td>変数.count()</td><td></td></tr>\n",
+              "<tr><td>ビット列を出力する</td><td>cout << 変数;</td><td></td></tr>\n",
+              "<tr><td>ビット列を文字列化する</td><td>変数.to_string()</td><td></td></tr>\n",
+              "<tr><td>ビットに対するアクセス</td><td>変数[位置]</td><td>基本的にはtest、set/resetと同等ですが、範囲外の位置を指定した場合にエラーにならないことに注意する必要があります。</td></tr>\n",
+              "</tbody>\n",
+              "</table>"
+            ]
+          },
+          "metadata": {}
+        }
+      ]
     },
     {
       "cell_type": "code",
