--- a/cpp_bitsetsearch.ipynb
+++ b/cpp_bitsetsearch.ipynb
@@ -6,7 +6,7 @@
       "name": "cpp_bitsetsearch.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyPhw0LY/JqJKgEdgdslI00Q",
+      "authorship_tag": "ABX9TyPqSWrW3QTrL6Yt0A8ZQ3oQ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -34,7 +34,7 @@
         "# メモ\n",
         "bitset を使った全探索をマスターしたい  \n",
         "apg4b の bitset の部分を勉強する  \n",
-        "cpp_bit.ipynb は bitset を使わずに全探索を説明している  \n",
+        "cpp_bit.ipynb は bitset を使わずに全探索を説明しているので書き換える  \n",
         "易しい問題を解く"
       ],
       "metadata": {
@@ -114,15 +114,150 @@
     {
       "cell_type": "code",
       "source": [
-        "# 上記の部分和問題の解法は理解した\n",
-        "# 一般化出来ないと思う\n",
-        "# 例えば重複ありとか。文字列の全探索とか。"
+        "# 上記の部分和問題の解法は理解したが\n",
+        "# 一般化出来ないと思うので\n",
+        "# 普通の全探索をやってみよう"
       ],
       "metadata": {
         "id": "U7anW-ivwYXf"
       },
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 部分和を全探索のテンプレート通りにやってみる\n",
+        "%%writefile temp.cpp\n",
+        "#include <bits/stdc++.h>\n",
+        "using namespace std;\n",
+        "\n",
+        "int main() {\n",
+        "    int N, K;\n",
+        "    cin >> N >> K;\n",
+        "    vector<int> vec(N);\n",
+        "    for (int i = 0; i < N; i++) cin >> vec.at(i);\n",
+        "\n",
+        "    // N 桁の全探索ですべての場合について合計が K になるかを調べる\n",
+        "    bool flag = false;\n",
+        "    for (int tmp = 0; tmp < (1 << N); tmp++) {\n",
+        "        bitset<4> bs(tmp);\n",
+        "        int sum = 0;\n",
+        "        for (int i = 0; i < N ; i++) {\n",
+        "            if (bs.test(i)) sum += vec.at(i);\n",
+        "        }\n",
+        "        if ( sum == K) flag = true;\n",
+        "    }\n",
+        "\n",
+        "    if (flag) cout << \"Yes\" << endl; // bitset の値を調べるのは test を使う\n",
+        "    else cout << \"No\" << endl;\n",
+        "}"
+      ],
+      "metadata": {
+        "id": "03gFjHsSn7gB",
+        "outputId": "186ff624-261f-409f-f80e-81fc09adc6b6",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 23,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Overwriting temp.cpp\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!g++ temp.cpp; echo 3 11 7 2 9 |./a.out #=> Yes\n",
+        "!g++ temp.cpp; echo 2 11 5 7 |./a.out #=> No"
+      ],
+      "metadata": {
+        "id": "WfDGdZMboGqW",
+        "outputId": "2b57fc77-1b1e-42b9-9e81-4ad6b5ca8028",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 24,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Yes\n",
+            "No\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 全探索のテンプレート\n",
+        "%%writefile temp.cpp\n",
+        "#include <bits/stdc++.h>\n",
+        "using namespace std;\n",
+        " \n",
+        "int main() {\n",
+        "    for (int tmp = 0; tmp < (1 << 3); tmp++) {\n",
+        "        bitset<3> s(tmp);\n",
+        "        cout << s << endl;\n",
+        "    }\n",
+        "}"
+      ],
+      "metadata": {
+        "id": "61d_AdjhtfZG",
+        "outputId": "85683b5e-af2d-4a96-911b-88de5f472ff0",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 26,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Overwriting temp.cpp\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!g++ temp.cpp; ./a.out"
+      ],
+      "metadata": {
+        "id": "eRt4dQdPtnlH",
+        "outputId": "155f009e-078e-4e45-efdd-ffaeaced1273",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 27,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "000\n",
+            "001\n",
+            "010\n",
+            "011\n",
+            "100\n",
+            "101\n",
+            "110\n",
+            "111\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -208,7 +343,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -231,7 +366,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -268,7 +403,7 @@
           "height": 135
         }
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -316,7 +451,7 @@
           "height": 67
         }
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
